-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.8.3, 6.9.1
-
-
5fc99e555 (dev)
QMenuBar is shown more like a context menu that opens from a tool button when added to QDialog. The image Qt6_8_menu.jpg shows this.
The menu bar used to look like correct menu (more like the one with QMainWindow) with Qt 5.15 and Qt 6.5, but with Qt 6.8 this has changed. The old behavior is shown in Qt6_5_menu.jpg.
Widget Designer shows the menu bar correctly (attached image designer.jpg)
(Adding a container widget to the dialog and placing the menu bar there shows the menu bar, but it’s visually different.)
Attached example shows the issue.
| For Gerrit Dashboard: QTBUG-139227 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 671404,4 | QWindows11Style: Increase minimum maxSize of QMenuBar | dev | qt/qtbase | Status: MERGED | +2 | 0 |