QWindows11Style: Increase minimum maxSize of QMenuBar

The QWindows11Style uses more vertical space for menubar items,
therefore the minimum maxSize needs to be increased so that the menubar
items are visible when placing manually a QMenuBar.

Fixes: QTBUG-139227
Change-Id: I116556a039c7f228b5be624f774bdaae44f804d7
Reviewed-by: Christian Ehrlicher <ch.ehrlicher@gmx.de>
(cherry picked from commit 5fc99e5551e012d07326770200207410e16bdd40)
Reviewed-by: Marc Mutz <marc.mutz@qt.io>